# AudioQAS

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.mjs  playwright.real.config.mjs  pyproject.toml  requirements.txt  todo.md
audioqas/: app.py  bootstrap.py
audioqas/core/: __init__.py  dimensions.py  history.py  preprocessor.py  scorer.py
audioqas/logging/: __init__.py  runtime.py
audioqas/models/: __init__.py  analysis.py  audiobox_aesthetics.py  base.py  dnsmos.py  nisqa.py
audioqas/ui/: analysis_page.py  batch_table.py  compare_drop_zone.py  comparison.py  drop_zone.py  history_page.py  main_window.py  metric_card.py  page_intro.py  score_card.py  settings_page.py  sidebar.py  stats.py  theme.py  toolbar.py
audioqas/web/: __init__.py  api.py  history_store.py  progress.py  registry.py  run_local.py  runtime.py  schemas.py  services.py  settings_store.py  tasks.py
design/: DESIGN.md  design-preview.html  design-tokens.json  web-preview-app.js  web-preview-data.js  web-preview.html
docs/: design-system-detailed.md  design-system.md  repository-layout.md  requirements.md  web-acceptance-checklist.md  web-product-spec.md  web-user-guide.md
meta/: format-support-test-report-2026-05-25.md  real-backend-e2e-test-report-2026-05-27.md  todo.md
scripts/: audioqas-bootstrap  audioqas-install.sh  bootstrap.sh
tests/: test_models.py  test_scorer.py  test_ui.py  test_web_api.py  test_web_preview_app.py  test_web_preview_data.py  test_web_service.py  test_web_settings_store.py  test_web_tasks.py  web_preview_data.test.mjs  web_preview_user_flow.test.mjs  web_preview_user_flow_real.test.mjs
tests/e2e/: web_preview_e2e.spec.mjs  web_preview_real_backend.spec.mjs
tests/helpers/: web_real_backend_payload.py
tests/python/: test_bootstrap.py  test_logging.py  test_models.py  test_web_api.py  test_web_preview_app.py  test_web_preview_data.py  (+3 more)
(+37 files in other folders)
